tests/samples/invalid/constant_evaluated_dereference.pn

const ADDR: &i32 = 0x7F00;
const X: i32 = ADDR;
